[package]
name = "zoop"
version = "0.1.0"
authors = ["Christoffer Moesgaard <cmoesgaard@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rofi = "0.2.2"
xdg = "^2.1"
copypasta-ext = "0.3.2"
serde = { version = "1.0", features = ["derive"] }
serde-lexpr = "0.1.0"
